[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/msgBaseX/msgBaseX.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/modUpdate/modUpdate.gd" type="Script" id=2]

[node name="msgBaseX" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="." index="0"]
margin_left = 148.0
margin_top = 31.0
margin_right = 1170.0
margin_bottom = 719.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel" index="0"]
margin_left = 420.353
margin_top = 13.6037
margin_right = 578.353
margin_bottom = 46.6037
text = "创意工坊-上传和更新"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="id" type="Label" parent="Panel" index="1"]
margin_left = 421.519
margin_top = 61.4238
margin_right = 607.519
margin_bottom = 99.4238
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tile" type="Label" parent="Panel" index="2"]
margin_left = 228.42
margin_top = 175.789
margin_right = 274.42
margin_bottom = 213.789
text = "标题"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="Panel/tile" index="0"]
margin_left = 114.0
margin_top = 2.0
margin_right = 506.0
margin_bottom = 40.0

[node name="info" type="Label" parent="Panel" index="3"]
margin_left = 229.472
margin_top = 218.946
margin_right = 275.472
margin_bottom = 256.946
text = "描述"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="TextEdit" parent="Panel/info" index="0"]
margin_left = 112.0
margin_top = 2.0
margin_right = 508.0
margin_bottom = 148.0

[node name="dir" type="Label" parent="Panel" index="4"]
margin_left = 224.209
margin_top = 110.525
margin_right = 331.209
margin_bottom = 148.525
text = "mod文件夹"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Panel/dir" index="0"]
margin_left = 123.581
margin_top = -3.99854
margin_right = 231.581
margin_bottom = 39.3768
text = "选择"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/dir" index="1"]
margin_left = 257.893
margin_top = 3.1579
margin_right = 265.893
margin_bottom = 41.1579

[node name="Button2" type="Button" parent="Panel/dir" index="2"]
margin_left = -65.35
margin_top = -0.949997
margin_right = -14.35
margin_bottom = 47.4254
text = "?"

[node name="file" type="Label" parent="Panel" index="5"]
margin_left = 219.999
margin_top = 398.946
margin_right = 284.999
margin_bottom = 436.946
text = "封面图"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Panel/file" index="0"]
margin_left = 106.0
margin_top = -6.0
margin_right = 204.0
margin_bottom = 37.3754
text = "选择"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/file" index="1"]
margin_left = 226.315
margin_right = 234.315
margin_bottom = 38.0

[node name="Button" type="Button" parent="." index="1"]
margin_left = 572.684
margin_top = 572.579
margin_right = 759.684
margin_bottom = 620.954
text = "上传"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="." index="2"]
margin_left = 572.684
margin_top = 628.368
margin_right = 759.684
margin_bottom = 676.744
text = "返回"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="." index="3"]
margin_left = 296.0
margin_top = 245.0
margin_right = 1021.0
margin_bottom = 591.0
window_title = "打开目录"
mode = 2
access = 2
current_dir = "D:/GODOT/STO/beastGirlP/beastGirl"
current_path = "D:/GODOT/STO/beastGirlP/beastGirl/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog2" type="FileDialog" parent="." index="4"]
margin_left = 296.0
margin_top = 245.0
margin_right = 1021.0
margin_bottom = 591.0
window_title = "打开单个文件"
mode = 0
access = 2
filters = PoolStringArray( "*.png", "*.jpg" )
current_dir = "D:/GODOT/STO/beastGirlP/beastGirl"
current_path = "D:/GODOT/STO/beastGirlP/beastGirl/"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Panel/dir/Button" to="." method="_on_Button_mod_pressed"]
[connection signal="pressed" from="Panel/dir/Button2" to="." method="_on_wenhao_pressed"]
[connection signal="pressed" from="Panel/file/Button" to="." method="_on_png_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_FileDialog_dir_selected"]
[connection signal="file_selected" from="FileDialog2" to="." method="_on_FileDialog2_file_selected"]
